tests/contract_testcases/substrate/variables/global_constants_02.sol
uint constant external x = 102;
// ---- Expect: diagnostics ----
// error: 1:15-23: 'external': global variable cannot have visibility specifier
